fix wrapping on log in

--- a/db/static/style.css
+++ b/db/static/style.css
@@ -72,6 +72,7 @@ a {
 }
 
 .topnav a {
+  white-space: nowrap;
   background-color: #ffffff;
   text-align: center;
   padding: 12px 14px;
